# personalfme

./: .gitignore  .gitmodules  AUTHORS.txt  CHANGES.txt  CMakeLists.txt  COPYRIGHT.template  COPYRIGHT.txt  Doxyfile  LICENSE.txt  README.md  config.xsd  license.template
CMakeModules/: BuildType.cmake  CreateManpageDocumentationTarget.cmake  CreatePdfDocumentationTarget.cmake  DebianPackager.cmake  FindPoco.cmake  GetDebianPackageName.cmake  Installer.cmake  WindowsInstaller.cmake  determine_compiler.cmake  get_GNU_license.cmake  lgpl_v2.1.txt
CMakeModules/linux/: AlglibConfig.cmake  LibsndfileConfig.cmake  SndFileConfig.cmake  XercesCConfig.cmake  portaudioConfig.cmake
Console/: BasicFunctionality.cpp  BasicFunctionality.h  CMakeLists.txt  Logger.cpp  Logger.h  PersonalFME.bat  main.cpp  plot_data.m  stdafx.h  sync_cout.cpp  sync_cout.h  targetver.h
Core/: AnalysisParam.cpp  AnalysisParam.h  AudioDevice.cpp  AudioDevice.h  AudioFullDownsampler.h  AudioInput.cpp  AudioInput.h  AudioInputParam.cpp  AudioInputParam.h  AudioSignalPreserver.h  AudioSignalReader.h  CMakeLists.txt  DataProcessing.h  ErrorStreamManipulator.cpp  ErrorStreamManipulator.h  FFT.h  FIRfilter.h  FME.h  FMEAnalysisParam.cpp  FMEAnalysisParam.h  FMEAudioInput.cpp  FMEAudioInput.h  FMEAudioInputDebug.cpp  FMEAudioInputDebug.h  FMEGenerateParam.cpp  FMEGenerateParam.h  FMESequenceSearch.h  FrequencySearch.h  IIRfilter.h  PortaudioWrapper.h  PrivImplementationDebug.h  ProduceCode.h  ProduceFMECode.h  Search.h  SearchTransferFunc.cpp  SearchTransferFunc.h  SequencePasser.h  SequencePasserDebug.h  ToneSearch.h  amplituden.xmcd  (+4 more)
CoreTest/: CMakeLists.txt  CoreTest.cpp  stdafx.cpp  stdafx.h  targetver.h
Middleware/: AudioSettings.h  CMakeLists.txt  Dir.cpp  Dir.h  ExecutionDetectorRuntime.cpp  ExecutionDetectorRuntime.h  ExecutionRuntime.cpp  ExecutionRuntime.h  FileSettings.h  SettingsParam.cpp  SettingsParam.h  SettingsParamSchema.xsd  XMLSerializableSettingsParam.cpp  XMLSerializableSettingsParam.h
Networking/: AlarmGateway.cpp  AlarmGateway.h  AlarmGatewaysManager.cpp  AlarmGatewaysManager.h  AlarmMessage.cpp  AlarmMessage.h  AlarmMessagesDatabase.cpp  AlarmMessagesDatabase.h  AlarmMessagesDatabaseSchema.xsd  AlarmValidities.cpp  AlarmValidities.h  AlarmValiditiesSchema.xsd  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  ConnectionThread.cpp  ConnectionThread.h  CustomTimeDateTypesSchema.xsd  DefaultValidity.cpp  DefaultValidity.h  EmailGateway.cpp  EmailGateway.h  EmailGatewayImpl.cpp  EmailGatewayImpl.h  EmailLoginData.cpp  EmailLoginData.h  EmailLoginDataSchema.xsd  EmailMessage.cpp  EmailMessage.h  EmailMessageSchema.xsd  ExternalProgramGateway.cpp  ExternalProgramGateway.h  ExternalProgramLoginData.cpp  ExternalProgramLoginData.h  ExternalProgramLoginDataSchema.xsd  ExternalProgramMessage.cpp  ExternalProgramMessage.h  ExternalProgramMessageSchema.xsd  FMEClient.cpp  FMEClient.h  (+82 more)
OGGAudioPlugin/: CMakeLists.txt  OGGAudioPlugin.cpp  OGGAudioPlugin.h  OGGHandler.cpp  OGGHandler.h
UnitTests/: AlarmGatewaysManagerTest.h  AlarmMessageDatabaseTest.h  AlarmValiditiesTest.h  BoostStdTimeConverterTest.h  CMakeLists.txt  CodeDataTest.h  ConnectionManagerTest.h  ConnectionMocks.h  ConnectionThreadTest.h  DateTimeTest.h  DefaultValidityTest.h  DetectorStatusMessageTest.h  EmailGatewayTest.h  EmailLoginDataTest.h  EmailMessageTest.h  ExternalProgramGatewayTest.h  ExternalProgramLoginDataTest.h  ExternalProgramMessageTest.h  FileUtilsTest.h  GatewayLoginDatabaseTest.h  GeneralStatusMessageTest.h  Groupalarm2GatewayTest.h  Groupalarm2LoginDataTest.h  Groupalarm2MessageTest.h  GroupalarmGatewayTest.h  GroupalarmLoginDataTest.h  GroupalarmMessageTest.h  InfoalarmMessageDecoratorTest.h  MonthlyValidityTest.h  OGGHandlerTest.h  PerformMATLABfiltering.m  RandomFMEParams.cpp  RandomFMEParams.h  SendStatusMessageTest.h  SeqDataCompleteTest.h  SeqDataTest.h  SerializableCodeDataTest.h  SerializableDateTimeTest.h  SerializableSeqDataCompleteTest.h  SerializableSeqDataTest.h  (+82 more)
UnitTests/fftTests/: fft.m  plot_data.m
UnitTests/fmeDetectionTests/: conversion_dB_percent.xmcd  plot_data.m
UnitTests/portaudioTests/: auswertung.m
UnitTests/post-processing/: requirements.txt  visualize_multiple_detections_result.py
UnitTests/reference-data/: filter-design.json  fir-filter-down-sampling.json  fir-filter-high-fc.json  fir-filter-low-fc.json  fir-filter-re-sampling.json  fir-filter-up-sampling.json  generate_reference_data.py  iir-filter-down-sampling.json  iir-filter-high-fc.json  iir-filter-low-fc.json  iir-filter-up-sampling.json  reference_data.py  requirements.txt  test-signal.txt
Utilities/: AudioPlugin.h  BoostStdTimeConverter.cpp  BoostStdTimeConverter.h  CMakeLists.txt  CTime.cpp  CTime.h  CodeData.h  DateTime.cpp  DateTime.h  DetectorStatusMessage.cpp  DetectorStatusMessage.h  FileUtils.cpp  FileUtils.h  GeneralStatusMessage.cpp  GeneralStatusMessage.h  MediaFile.cpp  MediaFile.h  ParserErrorHandler.cpp  ParserErrorHandler.h  PluginLoader.h  SendStatusMessage.h  SeqData.cpp  SeqData.h  SeqDataComplete.h  SerializableCodeData.h  SerializableDateTime.cpp  SerializableDateTime.h  SerializableSeqData.cpp  SerializableSeqData.h  SerializableSeqDataComplete.h  SerializableTime.cpp  SerializableTime.h  StatusMessage.cpp  StatusMessage.h  StringUtilities.h  StringUtils.cpp  StringUtils.h  TimeDatatypes.h  VersionInfo.cpp  VersionInfo.h  (+12 more)
WAVAudioPlugin/: CMakeLists.txt  WAVAudioPlugin.cpp  WAVAudioPlugin.h  WAVHandler.cpp  WAVHandler.h
documentation/: benutzerhandbuch.template  benutzerhandbuch_html_xsl.template  benutzerhandbuch_xsl.template  chap1.xml  chap2.template  chap3.xml  chap4.template  make_html_doc.bat  make_html_doc.sh  make_manpage_doc.sh  make_pdf_doc.bat  make_pdf_doc.sh  manpage.template  personalfme.1
groupalarmDemo/: CMakeLists.txt  main.cpp
libraries/Alglib/: CMakeLists.txt
libraries/Alglib/libalglib/: alglibversion.template
libraries/licenses/: flac_license.txt  (+1 more)
rust/: Cargo.toml
testdata/: signal_0pct.txt  signal_40pct.txt  signal_50pct.txt  signal_70pct.txt  signal_75pct.txt
(+12 files in other folders)
